@@ -41,8 +41,8 @@
 using namespace arangodb;
 using namespace arangodb::graph;
 
-TraverserDocumentCache::TraverserDocumentCache(transaction::Methods* trx)
-    : TraverserCache(trx), _cache(nullptr) {
+TraverserDocumentCache::TraverserDocumentCache(aql::Query* query)
+    : TraverserCache(query), _cache(nullptr) {
   auto cacheManager = CacheManagerFeature::MANAGER;
   TRI_ASSERT(cacheManager != nullptr);
   _cache = cacheManager->createCache(cache::CacheType::Plain);
