@@ -1,6 +1,14 @@
 devel
 -----
 
+* AQL: during a traversal if a vertex is not found. It will not print an ERROR to the log and continue
+  with a NULL value, but will register a warning at the query and continue with a NULL value.
+  The situation is not desired as an ERROR as ArangoDB can store edges pointing to non-existing
+  vertex which is perfectly valid, but it may be a n issue on the data model, so users
+  can directly see it on the query now and do not "by accident" have to check the LOG output.
+
+* UI: fixed event cleanup in cluster shards view
+
 * fixed issue #3618: Inconsistent behavior of OR statement with object bind parameters
 
 * potential fix for issue #3562: Document WITHIN_RECTANGLE not found
